@@ -260,6 +260,62 @@ def doctest_TimeWindow_report_categories():
 
     """
 
+def doctest_TimeWindow_daily_report():
+    r"""Tests for TimeWindow.daily_report
+        >>> import sys
+
+        >>> from datetime import datetime, time
+        >>> from tempfile import NamedTemporaryFile
+        >>> from gtimelog.main import TimeWindow
+
+        >>> vm = time(2, 0)
+        >>> min = datetime(2010, 1, 30)
+        >>> max = datetime(2010, 1, 31)
+        >>> fh = NamedTemporaryFile()
+
+        >>> window = TimeWindow(fh.name, min, max, vm)
+        >>> window.daily_report(sys.stdout, 'foo@bar.com', 'Bob Jones')
+        To: foo@bar.com
+        Subject: 2010-01-30 report for Bob Jones (Sat, week 04)
+        <BLANKLINE>
+        No work done today.
+
+        >>> _ = [fh.write(s + '\n') for s in [
+        ...    '2010-01-30 09:00: start',
+        ...    '2010-01-30 09:23: Bing: stuff',
+        ...    '2010-01-30 12:54: Bong: other stuff',
+        ...    '2010-01-30 13:32: lunch **',
+        ...    '2010-01-30 15:46: misc',
+        ...    '']]
+        >>> fh.flush()
+
+        >>> window = TimeWindow(fh.name, min, max, vm)
+        >>> window.daily_report(sys.stdout, 'foo@bar.com', 'Bob Jones')
+        To: foo@bar.com
+        Subject: 2010-01-30 report for Bob Jones (Sat, week 04)
+        <BLANKLINE>
+        Start at 09:00
+        <BLANKLINE>
+        Bing: stuff                                                     23 min
+        Bong: other stuff                                               3 hours 31 min
+        Misc                                                            2 hours 14 min
+        <BLANKLINE>
+        Total work done: 6 hours 8 min
+        <BLANKLINE>
+        By category:
+        <BLANKLINE>
+        Bing                                                            23 min
+        Bong                                                            3 hours 31 min
+        (none)                                                          2 hours 14 min
+        <BLANKLINE>
+        Slacking:
+        <BLANKLINE>
+        Lunch **                                                        38 min
+        <BLANKLINE>
+        Time spent slacking: 38 min
+
+    """
+
 def doctest_TimeWindow_weekly_report():
     r"""Tests for TimeWindow.weekly_report
 
